# ERP_SYSTEM

./: .dockerignore  .env.example  .env.test  .gitignore  API_DOKUMENTATION.md  COMPREHENSIVE_IMPLEMENTATION_SUMMARY.md  Cargo.toml  DATABASE_SETUP.md  DEUTSCHE_DOKUMENTATION.md  Dockerfile  GITHUB_SETUP.md  LICENSE  PROJECT_STATUS.md  README.md  README_DOCKER.md  README_MIGRATION.md  SYSTEM_STATUS.md  TEST_SUMMARY_REPORT.md  apply_schema.rs  complete_aligned_schema.sql  complete_schema.sql  comprehensive_schema.sql  create_correct_tables.sql  create_missing_tables.sql  docker-compose.dev.yml  docker-compose.yml  final_test_summary.md  fix_database_schema.sql  minimal_schema.sql  quick_fix.sql  test_compile.rs  test_summary.md  updated_suppliers_schema.sql
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
config/: default.toml  development.toml  production.toml  testing.toml
crates/api/: Cargo.toml
crates/api/src/: error.rs  error_handler.rs  health.rs  main.rs  state.rs
crates/api/src/api_middleware/: mod.rs  request_id.rs  security_headers.rs  tenant_context.rs
crates/api/src/handlers/: auth.rs  customers.rs  mod.rs  roles.rs  users.rs
crates/auth/: Cargo.toml
crates/auth/src/: dto.rs  handlers.rs  lib.rs  middleware.rs  models.rs  openapi.rs  repository.rs  service.rs  tests.rs  unit_tests.rs  validation.rs
crates/auth/src/email/: jobs.rs  mod.rs  service.rs  templates.rs
crates/auth/src/tokens/: manager.rs  mod.rs  types.rs
crates/auth/src/workflows/: email_verification.rs  mod.rs  password_reset.rs
crates/auth/tests/: integration_tests.rs
crates/auth/tests/integration/: authorization_test.rs  common.rs  email_verification_test.rs  login_test.rs  mod.rs  password_reset_test.rs  registration_test.rs  role_assignment_test.rs  role_management_test.rs  user_management_test.rs
crates/core/: Cargo.toml
crates/core/sql/: tenant_schema.sql
crates/core/src/: config.rs  database.rs  lib.rs  security.rs  session.rs  tests.rs  types.rs  utils.rs
crates/core/src/audit/: event.rs  logger.rs  mod.rs  repository.rs  traits.rs
crates/core/src/error/: codes.rs  context.rs  framework.rs  metrics.rs  mod.rs
crates/core/src/jobs/: executor.rs  mod.rs  queue.rs  traits.rs  types.rs
crates/core/src/metrics/: auth_metrics.rs  mod.rs  registry.rs
crates/core/src/security/: encryption.rs  hashing.rs  jwt.rs  totp.rs
crates/core/src/session/: cleanup.rs
crates/deploy/: Cargo.toml
crates/deploy/src/: config.rs  lib.rs  main.rs  utils.rs
crates/deploy/src/commands/: backup.rs  database.rs  docker.rs  health.rs  install.rs  logs.rs  mod.rs  status.rs  tenant.rs
crates/master-data/: Cargo.toml
crates/master-data/src/: error.rs  lib.rs  location.rs  organization.rs  product.rs  supplier.rs  types.rs  utils.rs
crates/master-data/src/customer/: aggregate.rs  analytics.rs  analytics_engine.rs  event_store.rs  events.rs  handlers.rs  mod.rs  model.rs  repository.rs  repository_broken.rs.bak  repository_broken2.rs.bak  repository_minimal.rs.bak  search.rs  service.rs  validation.rs
crates/master-data/src/customer/tests/: comprehensive_test.rs  integration.rs  integration_tests.rs  mod.rs  performance.rs  performance_tests.rs  security.rs  security_tests.rs  simple.rs  unit.rs  unit_tests.rs
crates/master-data/src/handlers/: mod.rs
crates/master-data/src/inventory/: analytics.rs  mod.rs  model.rs  optimization.rs  repository.rs  service.rs
crates/master-data/src/product/: analytics.rs  handlers.rs  model.rs  repository.rs  service.rs
crates/master-data/src/security/: access_control.rs  audit.rs  compliance.rs  data_masking.rs  encryption.rs  mod.rs
crates/master-data/src/supplier/: analytics.rs  handlers.rs  model.rs  repository.rs  service.rs
docker/postgres-config/: postgresql.conf
docker/postgres-init/: 001_init_complete_schema.sql  002_inventory_system.sql  003_analytics_and_indexes.sql  004_seed_data.sql
docker/redis-config/: redis.conf
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md
docs/api/: API_DOKUMENTATION.md
docs/architecture/: ARCHITECTURE.md  CONFIGURATION.md
docs/deployment/: DEPLOYMENT_GUIDE.md
docs/development/: CONTRIBUTING.md
docs/github/: github_issues_templates.md
docs/project/: PROJECT_STATUS.md
docs/testing/: test_reports.md
infrastructure/k8s/: configmap.yaml  namespace.yaml
infrastructure/terraform/: main.tf  terraform.tfvars.example  variables.tf
migrations/: 002_master_data_schema.sql  002_tenant_schema_template.sql  20240917_001_create_verification_tokens.sql  20241216_003_search_indexes.sql  20241216_007_missing_enum_types.sql  20241216_009_add_missing_performance_columns.sql
migrations/seeds/: 001_default_roles.sql  002_reference_data.sql  003_admin_user.sql
migrations_backup/: 001_public_schema.sql  002_enums_only.sql  20241216_004_security_schema.sql  20241216_005_fix_missing_columns.sql  20241216_006_final_missing_columns.sql  20241216_008_fix_all_missing_columns.sql  init.sql
scripts/: README.md  apply_migrations.bat  create-tenant.sh  dev.sh  development_setup.bat  docker_logs.bat  docker_reset.bat  docker_start.bat  docker_stop.bat  install.sh  recreate_database.sh  reset_database.sh  run_tests.bat  run_tests.sh  setup-production.sh  setup_database.bat  setup_database.sh  setup_test_db.sql  validate_docker_stack.bat  validate_system.bat
scripts/fixes/: fix_industry_classification.sql
scripts/setup/: fix_schema.sql
src/: apply_schema.rs
