[workspace]
members = [
    "crates/core",
    "crates/auth",
    "crates/api",
    "crates/master-data",
    "crates/deploy"
]
resolver = "2"

# Workspace root - no package here, just workspace definition

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ERP Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.47", features = ["full"] }
futures = "0.3"

# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "compression-br", "compression-gzip", "trace", "limit"] }
hyper = { version = "1.5", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "ipnetwork", "rust_decimal"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "ahash"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utils
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"

# Tracing and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# Security
argon2 = "0.5"
jsonwebtoken = "9.0"
totp-rs = "5.7"
aes-gcm = "0.10"

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1", "smtp-transport", "tokio1-rustls-tls", "builder"] }

# Validation
validator = { version = "0.19", features = ["derive"] }

# Configuration
config = { version = "0.14", features = ["yaml"] }

# Event Sourcing & CQRS
cqrs-es = "0.4"

# Analytics & Data Processing
polars = { version = "0.46", features = ["lazy", "temporal", "strings", "json"] }
tantivy = "0.22"

# Caching & Performance
cached = { version = "0.51", features = ["async"] }
dashmap = "6.1"

# Message Bus & Streaming
redis-streams = "0.1"
async-stream = "0.3"

# Machine Learning Support
candle-core = "0.7"
candle-nn = "0.7"

# Metrics
prometheus = { version = "0.14", features = ["process"] }

# Background jobs

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# OpenAPI
utoipa = { version = "5.4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "8.1", features = ["axum", "vendored"] }

# Additional missing dependencies
async-trait = "0.1"
rand = "0.8"
once_cell = "1.0"
base64 = "0.22"
regex = "1.0"
lazy_static = "1.4"
time = { version = "0.3", features = ["serde-human-readable"] }
tokio-rustls = "0.24"
tokio-test = "0.4"
rust_decimal = { version = "1.36", features = ["serde-float", "db-postgres"] }


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

