[package]
name = "erp-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal
erp-core = { path = "../core", features = ["axum"] }

# Async runtime
tokio.workspace = true

# Web framework
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true

# Database
sqlx = { workspace = true }
redis.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Security
argon2.workspace = true
jsonwebtoken.workspace = true
totp-rs.workspace = true
aes-gcm.workspace = true
rand.workspace = true

# Utils
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
validator.workspace = true
reqwest.workspace = true
base64.workspace = true
regex.workspace = true
once_cell.workspace = true
lazy_static = "1.4"
time = { version = "0.3", features = ["serde-human-readable"] }

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1", "smtp-transport", "tokio1-rustls-tls", "builder"] }
tokio-rustls = "0.24"

# OpenAPI
utoipa.workspace = true

[dev-dependencies]
# Testing
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }