[package]
name = "erp-master-data"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core infrastructure
erp-core = { path = "../core" }

# Async runtime
tokio.workspace = true
futures.workspace = true

# Database
sqlx.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utils
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true

# Validation
validator.workspace = true

# Encryption and Security
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
regex = "1.0"
once_cell = "1.0"
ipnetwork = "0.20"
futures-util = "0.3"
rand = "0.8"

# Decimal arithmetic
rust_decimal = { workspace = true, features = ["serde", "db-postgres"] }

# HTTP Framework (optional for handlers)
axum = { workspace = true, optional = true }

[features]
default = []
axum = ["dep:axum", "erp-core/axum"]

[dev-dependencies]
tokio-test.workspace = true
rand = { version = "0.8", features = ["std_rng"] }